--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <!-- Creating an empty <div> to dynamically add all questions and choices upon page loading -->
+    
     <div class="container">
         <div class="header"> Totally Trivial Trivia</div>
+        <div class="timerDiv">
+        </div>
         <div class="row">
             <h2>Welcome!</h2>
             <h2>Please press the button to start the quiz!</h2>
